solved overflow problem

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,16 @@
     margin-bottom: 5px;
   }
 
+  .panel-no-padding {
+    
+    
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    margin-bottom: 5px;
+  }
+
   .nav-logo{
     width: 50px;
     height: 50px;
